// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`models should properly generate object type class for prisma model with descriptions: User 1`] = `
"import { Arg, Args, ArgsType, Ctx, Field, FieldResolver, Float, ID, InputType, Int, Mutation, ObjectType, Query, Resolver, Root, registerEnumType } from \\"type-graphql\\";

/** User model doc */
@ObjectType({
  isAbstract: true,
  description: \\"User model doc\\",
})
export class User {
  @Field(_type => Int, {
    nullable: false,
    description: undefined,
  })
  id!: number;

  /** field doc */
  @Field(_type => String, {
    nullable: false,
    description: \\"field doc\\",
  })
  stringField!: string;

  @Field(_type => Int, {
    nullable: false,
    description: undefined,
  })
  intField!: number;
}
"
`;

exports[`models should properly generate object type class for prisma model with different scalar fields types: User 1`] = `
"import { Arg, Args, ArgsType, Ctx, Field, FieldResolver, Float, ID, InputType, Int, Mutation, ObjectType, Query, Resolver, Root, registerEnumType } from \\"type-graphql\\";

@ObjectType({
  isAbstract: true,
  description: undefined,
})
export class User {
  @Field(_type => Int, {
    nullable: false,
    description: undefined,
  })
  intIdField!: number;

  @Field(_type => String, {
    nullable: false,
    description: undefined,
  })
  stringField!: string;

  @Field(_type => String, {
    nullable: true,
    description: undefined,
  })
  optionalStringField?: string | null;

  @Field(_type => Int, {
    nullable: false,
    description: undefined,
  })
  intField!: number;

  @Field(_type => Float, {
    nullable: false,
    description: undefined,
  })
  floatField!: number;

  @Field(_type => Boolean, {
    nullable: false,
    description: undefined,
  })
  booleanField!: boolean;

  @Field(_type => Date, {
    nullable: false,
    description: undefined,
  })
  dateField!: Date;
}
"
`;

exports[`models should properly generate object type class for prisma model with enum and alias fields types: User 1`] = `
"import { Arg, Args, ArgsType, Ctx, Field, FieldResolver, Float, ID, InputType, Int, Mutation, ObjectType, Query, Resolver, Root, registerEnumType } from \\"type-graphql\\";
import { Sample } from \\"../enums/Sample\\";

@ObjectType({
  isAbstract: true,
  description: undefined,
})
export class User {
  @Field(_type => Int, {
    nullable: false,
    description: undefined,
  })
  intIdField!: number;

  @Field(_type => Float, {
    nullable: false,
    description: undefined,
  })
  aliasField!: number;

  @Field(_type => Sample, {
    nullable: false,
    description: undefined,
  })
  enumField!: keyof typeof Sample;
}
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations: Post 1`] = `
"import { Arg, Args, ArgsType, Ctx, Field, FieldResolver, Float, ID, InputType, Int, Mutation, ObjectType, Query, Resolver, Root, registerEnumType } from \\"type-graphql\\";
import { User } from \\"../models/User\\";

@ObjectType({
  isAbstract: true,
  description: undefined,
})
export class Post {
  @Field(_type => Int, {
    nullable: false,
    description: undefined,
  })
  id!: number;

  author?: User;
}
"
`;

exports[`models should properly generate object type classes for prisma models with cyclic relations: User 1`] = `
"import { Arg, Args, ArgsType, Ctx, Field, FieldResolver, Float, ID, InputType, Int, Mutation, ObjectType, Query, Resolver, Root, registerEnumType } from \\"type-graphql\\";
import { Post } from \\"../models/Post\\";

@ObjectType({
  isAbstract: true,
  description: undefined,
})
export class User {
  @Field(_type => Int, {
    nullable: false,
    description: undefined,
  })
  id!: number;

  posts?: Post[] | null;
}
"
`;
